Basics about tensor creation

--- a/1.Create a Tensor.ipynb
+++ b/1.Create a Tensor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled13.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPZdhwPqQtRjIW6IXtumoCd",
+      "authorship_tag": "ABX9TyP+vKEAocJUWmBmCNGHjOP2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rxqwO90FI9y1",
-        "outputId": "35d8caa8-5d7f-40da-deab-d43c60a4ac63"
+        "outputId": "d6deb52f-64ba-467c-8950-dde4ec21f8fb"
       },
       "source": [
         "# Import TensorFlow\n",
@@ -60,7 +60,7 @@
       "source": [
         "# cmd + shift + space: check Fn"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -70,12 +70,39 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jtlsVlfvKDC5",
-        "outputId": "7451f549-ff08-41d6-d1b3-f5cd95173e15"
+        "outputId": "db7d877b-6192-454b-83ee-c27eb9afabfb"
       },
       "source": [
         "# Create tensors with tf.constant\n",
         "scalar = tf.constant(1) \n",
         "scalar"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=int32, numpy=1>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kt0G3lJkKXe-",
+        "outputId": "1c46ba39-f031-4a20-89a6-45c50f1eb7b2"
+      },
+      "source": [
+        "# Check the number of dimensions of a tensor\n",
+        "scalar.ndim"
       ],
       "execution_count": 5,
       "outputs": [
@@ -83,7 +110,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(), dtype=int32, numpy=1>"
+              "0"
             ]
           },
           "metadata": {},
@@ -97,12 +124,39 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "kt0G3lJkKXe-",
-        "outputId": "6458ce1c-2cc8-4182-f8c5-8099d2755eb7"
+        "id": "BQts_SCLLKo9",
+        "outputId": "511f5121-9741-4daf-edc7-b1d5d6991f36"
       },
       "source": [
-        "# Check the number of dimensions of a tensor\n",
-        "scalar.ndim"
+        "# Creat a vector\n",
+        "vector = tf.constant([1,1])\n",
+        "vector"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([1, 1], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jp8CXLnfLYr_",
+        "outputId": "2b993cbf-e69e-438c-c135-ac0f37f48a99"
+      },
+      "source": [
+        "vector.ndim"
       ],
       "execution_count": 7,
       "outputs": [
@@ -110,7 +164,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0"
+              "1"
             ]
           },
           "metadata": {},
@@ -124,13 +178,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "BQts_SCLLKo9",
-        "outputId": "ea461765-91a1-4150-a522-856f40755f34"
+        "id": "dHit-SvSLd3n",
+        "outputId": "e72a308c-cebd-4908-9550-a826c901bf53"
       },
       "source": [
-        "# Creat a vector\n",
-        "vector = tf.constant([1,1])\n",
-        "vector"
+        "# Create a matrix (more than 1 dimension)\n",
+        "matrix = tf.constant([[1,2],[3,4]])\n",
+        "matrix"
       ],
       "execution_count": 8,
       "outputs": [
@@ -138,7 +192,9 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([1, 1], dtype=int32)>"
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[1, 2],\n",
+              "       [3, 4]], dtype=int32)>"
             ]
           },
           "metadata": {},
@@ -152,11 +208,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Jp8CXLnfLYr_",
-        "outputId": "3fdf4cbb-ad46-4aee-f536-9d8fdd519205"
+        "id": "p5cgduoUL0tL",
+        "outputId": "6333e1a9-3b53-463f-c597-8d57f3512e49"
       },
       "source": [
-        "vector.ndim"
+        "matrix.ndim"
       ],
       "execution_count": 9,
       "outputs": [
@@ -164,7 +220,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1"
+              "2"
             ]
           },
           "metadata": {},
@@ -178,13 +234,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "dHit-SvSLd3n",
-        "outputId": "132b8af2-684c-43d0-e468-7e216e894661"
+        "id": "te11hu8TL4HM",
+        "outputId": "47d3f197-eab5-487c-a339-df0afa6fa653"
       },
       "source": [
-        "# Create a matrix (more than 1 dimension)\n",
-        "matrix = tf.constant([[1,2],[3,4]])\n",
-        "matrix"
+        "# Create another matrix with specified data type\n",
+        "another_matrix = tf.constant([1.,2.], dtype=tf.float16)\n",
+        "another_matrix"
       ],
       "execution_count": 10,
       "outputs": [
@@ -192,9 +248,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
-              "array([[1, 2],\n",
-              "       [3, 4]], dtype=int32)>"
+              "<tf.Tensor: shape=(2,), dtype=float16, numpy=array([1., 2.], dtype=float16)>"
             ]
           },
           "metadata": {},
@@ -208,62 +262,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "p5cgduoUL0tL",
-        "outputId": "1bb004db-26c2-4598-99f2-94a90119f95f"
-      },
-      "source": [
-        "matrix.ndim"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "te11hu8TL4HM",
-        "outputId": "a1a5f43f-c373-4f2a-8bfa-832eefe05878"
-      },
-      "source": [
-        "# Create another matrix with specified data type\n",
-        "another_matrix = tf.constant([1.,2.], dtype=tf.float16)\n",
-        "another_matrix"
-      ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tf.Tensor: shape=(2,), dtype=float16, numpy=array([1., 2.], dtype=float16)>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "OLEf_tqBMPHM",
-        "outputId": "800bab81-04ec-4afd-f33e-ea97bf1be1c2"
+        "outputId": "e5d0f532-4c78-4901-e6b7-5e8a933f5574"
       },
       "source": [
         "tensor = tf.constant([[[1,2,3],\n",
@@ -272,7 +272,7 @@
         "                       [1,2,3]]])\n",
         "tensor"
       ],
-      "execution_count": 18,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,7 +287,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 11
         }
       ]
     },
@@ -298,12 +298,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hi4ndbl4M-TE",
-        "outputId": "bc1edd57-97b0-4dfd-e6b1-851ad6acb5eb"
+        "outputId": "b80eaca5-9481-4fed-880b-a37cb3fd3555"
       },
       "source": [
         "tensor.ndim"
       ],
-      "execution_count": 19,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,9 +313,328 @@
             ]
           },
           "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qmEZWH4BOg9C",
+        "outputId": "8118fc24-25b9-4e50-b21e-211032a76929",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create tensor with tf.Variable()\n",
+        "changeable_tensor = tf.Variable([1,2])\n",
+        "unchangeable_tensor = tf.constant([1,2])\n",
+        "changeable_tensor,unchangeable_tensor"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Variable 'Variable:0' shape=(2,) dtype=int32, numpy=array([1, 2], dtype=int32)>,\n",
+              " <tf.Tensor: shape=(2,), dtype=int32, numpy=array([1, 2], dtype=int32)>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FyzIWtCQO6lA",
+        "outputId": "93e31822-9291-4e63-fadb-61e3655d97f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Change one element in the changeable tensor\n",
+        "changeable_tensor[0].assign(5)\n",
+        "# unchangeable_tensor[0].assign(5)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Variable 'UnreadVariable' shape=(2,) dtype=int32, numpy=array([5, 2], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
           "execution_count": 19
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_pQ3hhclPJs7",
+        "outputId": "6dd306d4-3398-4c45-cf7c-6cbec4134d2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Creating random tensors\n",
+        "random_1 = tf.random.Generator.from_seed(5)\n",
+        "random_1 = tf.random.uniform(shape=(2,2))\n",
+        "random_1"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=float32, numpy=\n",
+              "array([[0.63581395, 0.6244606 ],\n",
+              "       [0.18358326, 0.6250646 ]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fceZJcu_QtCQ",
+        "outputId": "2f53c0b4-af47-43f7-be32-775e6e0c7efb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "random_2 = tf.random.normal(shape=(2,2))\n",
+        "random_2"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=float32, numpy=\n",
+              "array([[ 1.1865299, -1.0164912],\n",
+              "       [ 0.9371584, -0.3069691]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eYsz9F9LQ4lg",
+        "outputId": "4576d2f8-365c-46d6-83d3-8d2653c7e887",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# shuffle the order of elemnts\n",
+        "not_shuffled = tf.constant([[1,2],\n",
+        "                            [3,4],\n",
+        "                            [5,6]])\n",
+        "\n",
+        "# shuffled along the 1st dimension\n",
+        "tf.random.set_seed(5) # global level seed \n",
+        "tf.random.shuffle(not_shuffled, seed=5) # operational level seed"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+              "array([[3, 4],\n",
+              "       [5, 6],\n",
+              "       [1, 2]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t3mX3YxiR1s5",
+        "outputId": "52fe30a6-0526-4a0a-d2de-411e0062d840",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#other ways to make tensors\n",
+        "tf.ones([5,5])"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(5, 5), dtype=float32, numpy=\n",
+              "array([[1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PerbC-XUTUBl",
+        "outputId": "265a0e2d-f474-419c-e6c1-741a3a4ed3eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf.zeros(shape=(2,3))"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
+              "array([[0., 0., 0.],\n",
+              "       [0., 0., 0.]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wIRfGwYTTWfm",
+        "outputId": "d69c5e7a-0633-48c4-e070-1f8d753002b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Turn numpy arrays to tensors\n",
+        "import numpy as np\n",
+        "\n",
+        "numpy_array = np.arange(1, 25, dtype = np.int32)\n",
+        "numpy_array"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+              "       18, 19, 20, 21, 22, 23, 24], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NGWDFK3zT38s",
+        "outputId": "b7d1f92e-c824-458f-fd9b-082f97ea4660",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tensor_array = tf.constant(numpy_array)\n",
+        "tensor_array"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(24,), dtype=int32, numpy=\n",
+              "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+              "       18, 19, 20, 21, 22, 23, 24], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kj4R1q4iUBOT",
+        "outputId": "33bb0c36-e15d-40d2-96ac-8f6fbed46c42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tensor_array = tf.constant(numpy_array,shape=(2,3,4))\n",
+        "tensor_array"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 3, 4), dtype=int32, numpy=\n",
+              "array([[[ 1,  2,  3,  4],\n",
+              "        [ 5,  6,  7,  8],\n",
+              "        [ 9, 10, 11, 12]],\n",
+              "\n",
+              "       [[13, 14, 15, 16],\n",
+              "        [17, 18, 19, 20],\n",
+              "        [21, 22, 23, 24]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1100kPBtUQBr"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
